// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Option /> should be active 1`] = `
<DocumentFragment>
  .c0 {
  cursor: default;
}

.c1 {
  border-radius: .2rem;
  fill: currrentcolor;
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: background,color,fill;
  transition-property: background,color,fill;
  background: #0556B2;
  color: #fff;
}

.c1 .svg,
.c1 .svg .fill,
.c1 .svg .stroke {
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: fill,stroke;
  transition-property: fill,stroke;
}

.c1 .svg,
.c1 .svg .fill {
  fill: #fff;
}

.c1 .svg .stroke {
  stroke: #fff;
}

<div
    class="c0 c1"
    cursor="$cursor.selectBox"
  >
    Content
  </div>
</DocumentFragment>
`;

exports[`<Option /> should render component 1`] = `
<DocumentFragment>
  .c0 {
  cursor: default;
}

.c1 {
  border-radius: .2rem;
  fill: currrentcolor;
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: background,color,fill;
  transition-property: background,color,fill;
}

.c1 .svg,
.c1 .svg .fill,
.c1 .svg .stroke {
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: fill,stroke;
  transition-property: fill,stroke;
}

<div
    class="c0 c1"
    cursor="$cursor.selectBox"
  >
    Content
  </div>
</DocumentFragment>
`;

exports[`<Option /> should render waveEffect 1`] = `
<DocumentFragment>
  .c0 {
  cursor: default;
  isolation: isolate;
  overflow: hidden;
  position: relative;
  -webkit-tap-highlight-color: transparent;
}

.c1 {
  border-radius: .2rem;
  fill: currrentcolor;
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: background,color,fill;
  transition-property: background,color,fill;
}

.c1 .svg,
.c1 .svg .fill,
.c1 .svg .stroke {
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: fill,stroke;
  transition-property: fill,stroke;
}

<div
    class="c0 c1"
    cursor="$cursor.selectBox"
    overflow="hidden"
  >
    Content
  </div>
</DocumentFragment>
`;
